crates/math-core/tests/snapshots/error_test__mathrm_unknown_cmd.snap
---
source: crates/math-core/tests/error_test.rs
expression: "\\mathrm{ab\\asdf}"
---
Error: Unknown command "\asdf".
   ╭─[ <input>:1:11 ]
   │
 1 │ \mathrm{ab\asdf}
   │           ──┬──  
   │             ╰──── unknown command
───╯
